--- a/androidjokelibrary/src/main/res/layout/activity_joke.xml
+++ b/androidjokelibrary/src/main/res/layout/activity_joke.xml
@@ -3,13 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.drken.androidjokelibrary.JokeActivity">
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fddf84"
         android:id="@+id/joke_webview"></WebView>
 </FrameLayout>
